<resources>
    <string name="app_name">Paises</string>
    <string name="search_by_name">Search by name</string>
    <string name="type_a_country_name">Type a country name</string>
    <string name="search">Search</string>
    <string name="code">Code</string>
    <string name="currencycode">CurrencyCode</string>
    <string name="name">Name</string>
    <string name="wikidataid">Wiki Id:</string>
    <string name="code_">CODE:</string>
    <string name="currency_code">Currency Code:</string>
    <string name="content">Content</string>
    <string name="countries">Countries</string>
</resources>